design navigation window

--- a/swiftsurf/Info.plist
+++ b/swiftsurf/Info.plist
@@ -2,9 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSAppTransportSecurity</key>
-	<dict/>
-	<key>Allow Arbitrary Loads</key>
-	<true/>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need access to the microphone.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to the camera.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need access to your location when the app is in use.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>We need access to your location.</string>
 </dict>
 </plist>
